fix image filter overflow

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -33,4 +33,8 @@
       #38aecc 95.74%
     );
   }
+
+  .rounded-inherit {
+    border-radius: inherit;
+  }
 }
